[package]
name = "switch-lamps"
version = "0.1.0"
authors = ["tippfehlr"]
edition = "2021"
license = "MIT"

[[bin]]
name = "switch-lamps"
test = false
bench = false

[dependencies]
ufmt = "0.2.0"
panic-halt = "0.2.0"
embedded-graphics = "0.8.1"
epd-waveshare = { version = "0.5.0", default-features = false }

# [dependencies.epd-waveshare]
# path = "../epd-waveshare/"

[dependencies.arduino-hal]
# there is no release with sparkfun-promini-3v3 yet
git = "https://github.com/tippfehlr/avr-hal"
rev = "792757761fca15dcb76e80d96e2b4281e91d7b5f"
# git = "https://github.com/rahix/avr-hal"
# rev = "38549cc4142881d302374535b3621578ffccaff2"
features = ["sparkfun-promini-3v3"]

[dependencies.avr-device]
version = "0.5.4"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "s"
